# 2hoarder

./: .gitignore  README.md  main.py  pyproject.toml
shaarli2hoarder/: .gitignore  README.md  convert.py
wallabag2hoarder/: README.md  base.py  convert.py  convert_api.py  convert_native_json.py  convert_netscape.py
