[project]
name = "2hoarder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # REQUIRED FOR CURRENT SHAARLI2HOARDER IMPLEMENTATION ONLY
    # "beautifulsoup4>=4.13.3",
    # "netscape-bookmarks-file-parser",
    # "pyjwt>=2.10.1",
    # "requests>=2.32.3",
    "requests>=2.32.3",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.uv.sources]
netscape-bookmarks-file-parser = { git = "https://github.com/FlyingWolFox/Netscape-Bookmarks-File-Parser.git" }
