[project]
name = "2hoarder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "requests>=2.32.3",
    # REQUIRED FOR CURRENT SHAARLI2HOARDER IMPLEMENTATION ONLY
    # "netscape-bookmarks-file-parser",
    # "pyjwt>=2.10.1",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.uv.sources]
netscape-bookmarks-file-parser = { git = "https://github.com/FlyingWolFox/Netscape-Bookmarks-File-Parser.git" }
